test/corpus/enum.txt
================================================================================
enum definition
================================================================================
enum T {
  A
  B(Int)
  C(String, Int)
  D(String, label~: T)
}
--------------------------------------------------------------------------------

(structure
  (structure_item
    (enum_definition
      (identifier
        (uppercase_identifier))
      (enum_constructor
        (uppercase_identifier))
      (semicolon
        (automatic_semicolon))
      (enum_constructor
        (uppercase_identifier)
        (constructor_parameter
          (type
            (apply_type
              (qualified_type_identifier
                (identifier
                  (uppercase_identifier)))))))
      (semicolon
        (automatic_semicolon))
      (enum_constructor
        (uppercase_identifier)
        (constructor_parameter
          (type
            (apply_type
              (qualified_type_identifier
                (identifier
                  (uppercase_identifier))))))
        (comma)
        (constructor_parameter
          (type
            (apply_type
              (qualified_type_identifier
                (identifier
                  (uppercase_identifier)))))))
      (semicolon
        (automatic_semicolon))
      (enum_constructor
        (uppercase_identifier)
        (constructor_parameter
          (type
            (apply_type
              (qualified_type_identifier
                (identifier
                  (uppercase_identifier))))))
        (comma)
        (constructor_parameter
          (parameter_label
            (lowercase_identifier))
          (colon)
          (type
            (apply_type
              (qualified_type_identifier
                (identifier
                  (uppercase_identifier)))))))
      (semicolon
        (automatic_semicolon)))))
